# pyml

./: README.md  pyproject.toml
pyml/train_model/: train.py
