[tool.poetry]
name = "pyml"
version = "0.1.0"
description = ""
authors = ["Mohammed Salama <dataubc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
numpy = "^2.1.2"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
